fix: harden omission provenance authority