@@ -7,6 +7,7 @@ import com.winter.airesumeoptimizer.module.workspace.dto.ResumeDocumentContactDT
 import com.winter.airesumeoptimizer.module.workspace.dto.ResumeDocumentDTO;
 import com.winter.airesumeoptimizer.module.workspace.dto.ResumeDocumentEntryDTO;
 import com.winter.airesumeoptimizer.module.workspace.dto.ResumeDocumentSectionDTO;
+import com.winter.airesumeoptimizer.module.workspace.enums.ResumeDocumentSectionKind;
 import com.winter.airesumeoptimizer.module.workspace.enums.WorkspaceSourceMappingStatus;
 import com.winter.airesumeoptimizer.module.workspace.service.WorkspaceSourceReferenceAssembler;
 import com.winter.airesumeoptimizer.module.workspace.vo.WorkspaceSourceReferenceVO;
@@ -15,6 +16,8 @@ import com.winter.airesumeoptimizer.module.workspace.vo.WorkspaceSourceReference
 import com.winter.airesumeoptimizer.module.workspace.vo.WorkspaceSourceReferenceVO.SourceGeometry;
 import com.winter.airesumeoptimizer.module.workspace.vo.WorkspaceSourceReferenceVO.TargetMapping;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.EnumMap;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -34,6 +37,30 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
 
     private static final String BLOCKER = "BLOCKER";
     private static final String WARNING = "WARNING";
+    private static final Set<String> CANONICAL_SECTION_KINDS = Arrays.stream(ResumeDocumentSectionKind.values())
+            .map(Enum::name)
+            .collect(Collectors.toUnmodifiableSet());
+    private static final Map<String, Function<ResumeDocumentBasicsDTO, String>> BASICS_FIELDS = Map.of(
+            "name", ResumeDocumentBasicsDTO::getName,
+            "jobIntention", ResumeDocumentBasicsDTO::getJobIntention,
+            "highestEducation", ResumeDocumentBasicsDTO::getHighestEducation);
+    private static final Map<String, Function<ResumeDocumentEntryDTO, String>> ENTRY_FIELDS = Map.ofEntries(
+            Map.entry("organization", ResumeDocumentEntryDTO::getOrganization),
+            Map.entry("role", ResumeDocumentEntryDTO::getRole),
+            Map.entry("school", ResumeDocumentEntryDTO::getSchool),
+            Map.entry("degree", ResumeDocumentEntryDTO::getDegree),
+            Map.entry("major", ResumeDocumentEntryDTO::getMajor),
+            Map.entry("startDate", ResumeDocumentEntryDTO::getStartDate),
+            Map.entry("endDate", ResumeDocumentEntryDTO::getEndDate),
+            Map.entry("location", ResumeDocumentEntryDTO::getLocation),
+            Map.entry("environment", ResumeDocumentEntryDTO::getEnvironment),
+            Map.entry("mentor", ResumeDocumentEntryDTO::getMentor),
+            Map.entry("group", ResumeDocumentEntryDTO::getGroup),
+            Map.entry("awardTitle", ResumeDocumentEntryDTO::getAwardTitle),
+            Map.entry("awardLevel", ResumeDocumentEntryDTO::getAwardLevel),
+            Map.entry("awardCompetition", ResumeDocumentEntryDTO::getAwardCompetition),
+            Map.entry("awardRanking", ResumeDocumentEntryDTO::getAwardRanking),
+            Map.entry("awardDate", ResumeDocumentEntryDTO::getAwardDate));
 
     @Override
     public WorkspaceSourceReferenceVO assemble(
@@ -50,10 +77,10 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         ConfirmationState confirmations = confirmations(target, manifest, issues);
         List<Node> sourceNodes = flatten(source);
         List<Node> nodes = flatten(target);
-        Map<String, Node> authenticatedNodes = sourceNodes.stream()
-                .collect(Collectors.toMap(WorkspaceSourceReferenceAssemblerImpl::identity, Function.identity(), (left, right) -> left));
-        FrozenOwnership sourceOwnership = frozenOwners(manifest, sourceNodes);
-        if (!sourceOwnership.valid()) {
+        Map<String, Node> authenticatedNodes = authenticationIndex(sourceNodes);
+        Set<String> duplicateTargetIdentities = duplicateIdentities(nodes);
+        FrozenOwnership sourceOwnership = frozenOwners(manifest, source, sourceNodes);
+        if (!sourceOwnership.valid() && issues.stream().noneMatch(issue -> "SOURCE_MANIFEST_INVALID".equals(issue.code()))) {
             issues.add(issue("SOURCE_MANIFEST_INVALID", BLOCKER,
                     "冻结原文归属关系不完整，无法安全建立定位关系。", List.of(), List.of()));
         }
@@ -64,7 +91,8 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         List<TargetMapping> mappings = new ArrayList<>();
         for (Node node : nodes) {
             Resolution resolution = resolve(node.occurrenceIds(), manifest);
-            boolean lineageMismatch = !authenticatedLineage(node, resolution, manifest, authenticatedNodes);
+            boolean lineageMismatch = duplicateTargetIdentities.contains(stableIdentity(node))
+                    || !authenticatedLineage(node, resolution, manifest, authenticatedNodes);
             WorkspaceSourceMappingStatus status;
             if (resolution.invalid() || lineageMismatch) {
                 status = WorkspaceSourceMappingStatus.AMBIGUOUS;
@@ -117,7 +145,8 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
             boolean omissionEligible = status == WorkspaceSourceMappingStatus.UNMAPPED
                     && manifest.valid() && sourceOwnership.valid()
                     && owner != null && owner.eligible()
-                    && !hasAmbiguousTargetFor(primary, nodes, manifest, authenticatedNodes);
+                    && !hasAmbiguousTargetFor(
+                            primary, nodes, manifest, authenticatedNodes, duplicateTargetIdentities);
             boolean omissionConfirmed = omissionEligible && confirmations.valid()
                     && confirmations.ids().containsAll(entry.getValue());
             if (inverse.isEmpty()) {
@@ -143,7 +172,8 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
                     owner == null ? null : owner.bulletId(), omissionConfirmed, omissionEligible));
         }
 
-        addStructuralIssues(source, target, blocks, issues);
+        addStructuralIssues(
+                source, target, blocks, sourceOwnership, manifest, nodes, authenticatedNodes, issues);
         EnumMap<WorkspaceSourceMappingStatus, Integer> counts = new EnumMap<>(WorkspaceSourceMappingStatus.class);
         for (WorkspaceSourceMappingStatus status : WorkspaceSourceMappingStatus.values()) counts.put(status, 0);
         for (TargetMapping mapping : mappings) counts.compute(mapping.status(), (key, value) -> value == null ? 1 : value + 1);
@@ -157,73 +187,103 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
     private static Manifest manifest(ResumeDocumentDTO source, List<FidelityIssue> issues) {
         List<String> rawOrder = source == null || source.getSourceOccurrenceIds() == null
                 ? List.of() : source.getSourceOccurrenceIds();
-        List<String> order = rawOrder.stream().filter(WorkspaceSourceReferenceAssemblerImpl::hasText)
-                .map(String::strip).toList();
         Map<String, String> rawTexts = source == null || source.getSourceOccurrenceTexts() == null
                 ? Map.of() : source.getSourceOccurrenceTexts();
         Map<String, String> rawPrimary = source == null || source.getSourceOccurrencePrimaryIds() == null
                 ? Map.of() : source.getSourceOccurrencePrimaryIds();
         Map<String, ResumeSourceRefDTO> rawRefs = source == null || source.getSourceOccurrenceRefs() == null
                 ? Map.of() : source.getSourceOccurrenceRefs();
-        if (order.isEmpty() || rawTexts.isEmpty()) {
+        if (rawOrder.isEmpty() || rawTexts.isEmpty()) {
             issues.add(issue("SOURCE_MANIFEST_UNAVAILABLE", BLOCKER,
                     "该历史版本没有可验证的原文 occurrence 清单，无法证明结构完整性。", List.of(), List.of()));
             return new Manifest(Map.of(), Map.of(), Map.of(), Set.of(), Map.of(), false);
         }
+
+        List<String> order = immutableListAllowingNull(rawOrder);
+        LinkedHashSet<String> known = new LinkedHashSet<>(order);
+        boolean invalid = known.size() != order.size()
+                || order.stream().anyMatch(id -> !canonicalId(id))
+                || !rawTexts.keySet().equals(known)
+                || !rawPrimary.keySet().equals(known)
+                || rawRefs.keySet().stream().anyMatch(id -> !canonicalId(id) || !known.contains(id));
+
         LinkedHashMap<String, List<String>> aliases = new LinkedHashMap<>();
         LinkedHashMap<String, String> aliasToPrimary = new LinkedHashMap<>();
         LinkedHashMap<String, String> texts = new LinkedHashMap<>();
-        LinkedHashMap<String, ResumeSourceRefDTO> refs = new LinkedHashMap<>();
-        Set<String> known = new LinkedHashSet<>(order);
-        boolean invalid = rawOrder.size() != order.size()
-                || known.size() != order.size()
-                || !rawTexts.keySet().equals(known)
-                || !rawPrimary.keySet().equals(known)
-                || rawRefs.keySet().stream().anyMatch(id -> !known.contains(id));
         for (String occurrenceId : order) {
-            String primary = rawPrimary.get(occurrenceId);
+            if (!canonicalId(occurrenceId)) {
+                continue;
+            }
             String text = rawTexts.get(occurrenceId);
-            if (!hasText(primary) || !known.contains(primary.strip()) || !hasText(text)) {
+            String primary = rawPrimary.get(occurrenceId);
+            if (!hasText(text) || !canonicalId(primary) || !known.contains(primary)) {
                 invalid = true;
                 continue;
             }
-            primary = primary.strip();
             String primaryRoot = rawPrimary.get(primary);
-            if (!hasText(primaryRoot) || !primary.equals(primaryRoot.strip())) {
+            String primaryText = rawTexts.get(primary);
+            if (!primary.equals(primaryRoot) || !hasText(primaryText) || !primaryText.equals(text)) {
                 invalid = true;
                 continue;
             }
-            String primaryText = rawTexts.get(primary);
-            if (!hasText(primaryText) || !normalized(primaryText).equals(normalized(text))) {
+            if (aliasToPrimary.putIfAbsent(occurrenceId, primary) != null) {
                 invalid = true;
                 continue;
             }
             aliases.computeIfAbsent(primary, ignored -> new ArrayList<>()).add(occurrenceId);
-            if (aliasToPrimary.putIfAbsent(occurrenceId, primary) != null) {
+            texts.putIfAbsent(primary, primaryText);
+        }
+
+        for (Map.Entry<String, List<String>> group : aliases.entrySet()) {
+            if (!group.getValue().contains(group.getKey())
+                    || group.getValue().stream().distinct().count() != group.getValue().size()
+                    || group.getValue().stream().anyMatch(id -> !group.getKey().equals(aliasToPrimary.get(id)))) {
                 invalid = true;
             }
-            texts.putIfAbsent(primary, primaryText);
-            ResumeSourceRefDTO ref = rawRefs.get(occurrenceId);
-            if (ref != null) {
-                boolean authenticRef = ref.getSourceOccurrenceIds() != null
-                        && ref.getSourceOccurrenceIds().stream().filter(Objects::nonNull)
-                        .map(String::strip).anyMatch(occurrenceId::equals)
-                        && normalized(ref.getText()).equals(normalized(text));
-                if (authenticRef) {
-                    refs.put(occurrenceId, ref);
-                } else {
-                    invalid = true;
-                }
-            }
         }
-        if (aliasToPrimary.size() != known.size()) {
+        if (aliasToPrimary.size() != known.size()
+                || aliases.values().stream().mapToInt(List::size).sum() != known.size()) {
             invalid = true;
+        }
+
+        LinkedHashMap<String, ResumeSourceRefDTO> refs = new LinkedHashMap<>();
+        for (Map.Entry<String, ResumeSourceRefDTO> entry : rawRefs.entrySet()) {
+            String occurrenceId = entry.getKey();
+            ResumeSourceRefDTO ref = entry.getValue();
+            if (!validSidecarRef(occurrenceId, ref, rawTexts, aliasToPrimary, known)) {
+                invalid = true;
+            } else {
+                refs.put(occurrenceId, ref);
+            }
         }
         if (invalid) {
             issues.add(issue("SOURCE_MANIFEST_INVALID", BLOCKER,
                     "冻结原文清单不完整，无法安全建立定位关系。", List.of(), List.of()));
         }
-        return new Manifest(aliases, aliasToPrimary, texts, known, refs, !invalid);
+        return new Manifest(immutableAliases(aliases), immutableMap(aliasToPrimary), immutableMap(texts),
+                immutableSet(known), immutableMap(refs), !invalid);
+    }
+
+    private static boolean validSidecarRef(
+            String occurrenceId,
+            ResumeSourceRefDTO ref,
+            Map<String, String> rawTexts,
+            Map<String, String> aliasToPrimary,
+            Set<String> known) {
+        if (ref == null || !Objects.equals(ref.getText(), rawTexts.get(occurrenceId))) {
+            return false;
+        }
+        List<String> ids = ref.getSourceOccurrenceIds();
+        if (ids == null || ids.isEmpty() || !ids.contains(occurrenceId)) {
+            return false;
+        }
+        LinkedHashSet<String> unique = new LinkedHashSet<>(ids);
+        String expectedPrimary = aliasToPrimary.get(occurrenceId);
+        return expectedPrimary != null
+                && unique.size() == ids.size()
+                && ids.stream().allMatch(id -> canonicalId(id)
+                        && known.contains(id)
+                        && Objects.equals(expectedPrimary, aliasToPrimary.get(id)));
     }
 
     private static ConfirmationState confirmations(
@@ -233,7 +293,7 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         LinkedHashSet<String> ids = new LinkedHashSet<>();
         boolean valid = manifest.valid();
         for (String id : raw) {
-            if (!hasText(id) || !manifest.knownIds().contains(id.strip()) || !ids.add(id.strip())) {
+            if (!canonicalId(id) || !manifest.knownIds().contains(id) || !ids.add(id)) {
                 valid = false;
             }
         }
@@ -246,12 +306,14 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         return new ConfirmationState(Set.copyOf(ids), valid);
     }
 
-    private static FrozenOwnership frozenOwners(Manifest manifest, List<Node> sourceNodes) {
-        Map<String, FrozenOwner> result = new HashMap<>();
-        boolean valid = sourceNodes.stream().map(Node::occurrenceIds)
+    private static FrozenOwnership frozenOwners(
+            Manifest manifest, ResumeDocumentDTO source, List<Node> sourceNodes) {
+        Map<String, FrozenOwner> result = new LinkedHashMap<>();
+        boolean valid = manifest.valid() && validFrozenDocument(source, manifest)
+                && sourceNodes.stream().map(Node::occurrenceIds)
                 .map(ids -> resolve(ids, manifest)).noneMatch(Resolution::invalid);
         Set<String> identities = new LinkedHashSet<>();
-        if (sourceNodes.stream().map(WorkspaceSourceReferenceAssemblerImpl::identity)
+        if (sourceNodes.stream().map(WorkspaceSourceReferenceAssemblerImpl::stableIdentity)
                 .anyMatch(identity -> !identities.add(identity))) {
             valid = false;
         }
@@ -262,16 +324,23 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
             }).toList();
             int depth = candidates.stream().mapToInt(Node::depth).max().orElse(-1);
             List<Node> deepest = candidates.stream().filter(node -> node.depth() == depth).toList();
+            if (deepest.isEmpty()) {
+                valid = false;
+                continue;
+            }
             if (deepest.size() > 1) {
-                // One physical contact line can legitimately materialize as several typed contact
-                // fields. It remains a SPLIT relationship and is not omission-eligible, but does
-                // not make the frozen manifest corrupt. Other duplicate deepest owners are invalid.
-                if (deepest.stream().anyMatch(node -> !"CONTACT".equals(node.type()))) {
+                // One physical header line can legitimately materialize as several typed contacts
+                // and BASICS scalar fields. It remains a SPLIT relationship and is not omission-
+                // eligible, but does not make the frozen manifest corrupt. Other owners are invalid.
+                boolean headerFieldSplit = deepest.stream().allMatch(node ->
+                        "CONTACT".equals(node.type()) || "BASICS".equals(node.type()));
+                if (!headerFieldSplit) {
                     valid = false;
                 }
                 continue;
             }
-            if (deepest.size() != 1 || !hasText(manifest.texts().get(primary))) {
+            if (!hasText(manifest.texts().get(primary))) {
+                valid = false;
                 continue;
             }
             Node node = deepest.get(0);
@@ -280,15 +349,153 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
                     node.type(), node.sectionKind(), node.sectionId(), node.entryId(), node.bulletId(),
                     node.depth(), eligible));
         }
-        return new FrozenOwnership(Map.copyOf(result), valid);
+        return new FrozenOwnership(Collections.unmodifiableMap(new LinkedHashMap<>(result)), valid);
+    }
+
+    private static boolean validFrozenDocument(ResumeDocumentDTO source, Manifest manifest) {
+        if (source == null) {
+            return false;
+        }
+        boolean valid = validChildRef(source.getSourceRef(), manifest);
+        Set<String> stableIdentities = new LinkedHashSet<>();
+        ResumeDocumentBasicsDTO basics = source.getBasics();
+        if (basics != null) {
+            valid &= validOccurrencePair(
+                    basics.getSourceOccurrenceIds(), basics.getSourceRef(), manifest);
+            valid &= validSemanticRefMap(
+                    basics.getFieldSourceRefs(), basics, BASICS_FIELDS, manifest);
+            for (ResumeDocumentContactDTO contact : safe(basics.getContacts())) {
+                if (contact == null || !canonicalId(contact.getId())
+                        || !stableIdentities.add(contact.getId())) {
+                    valid = false;
+                    continue;
+                }
+                valid &= validOccurrencePair(
+                        contact.getSourceOccurrenceIds(), contact.getSourceRef(), manifest);
+            }
+        }
+        for (ResumeDocumentSectionDTO section : safe(source.getSections())) {
+            if (section == null || !canonicalId(section.getId())
+                    || !CANONICAL_SECTION_KINDS.contains(section.getKind())
+                    || !stableIdentities.add(section == null ? null : section.getId())) {
+                valid = false;
+                continue;
+            }
+            valid &= validOccurrencePair(
+                    section.getSourceOccurrenceIds(), section.getSourceRef(), manifest);
+            for (ResumeDocumentEntryDTO entry : safe(section.getEntries())) {
+                if (entry == null || !canonicalId(entry.getId())
+                        || !stableIdentities.add(entry.getId())) {
+                    valid = false;
+                    continue;
+                }
+                valid &= validOccurrencePair(
+                        entry.getSourceOccurrenceIds(), entry.getSourceRef(), manifest);
+                valid &= validSemanticRefMap(
+                        entry.getFieldSourceRefs(), entry, ENTRY_FIELDS, manifest);
+                valid &= validAlignedRefs(entry.getTechStack(), entry.getTechStackSourceRefs(), manifest);
+                valid &= validAlignedRefs(entry.getSkillItems(), entry.getSkillItemSourceRefs(), manifest);
+                valid &= validAlignedRefs(
+                        entry.getSkillDescriptions(), entry.getSkillDescriptionSourceRefs(), manifest);
+                for (ResumeDocumentBulletDTO bullet : safe(entry.getBullets())) {
+                    if (bullet == null || !canonicalId(bullet.getId())
+                            || !stableIdentities.add(bullet.getId())) {
+                        valid = false;
+                        continue;
+                    }
+                    valid &= validOccurrencePair(
+                            bullet.getSourceOccurrenceIds(), bullet.getSourceRef(), manifest);
+                }
+            }
+        }
+        return valid;
+    }
+
+    private static boolean validOccurrenceIds(List<String> ids, Manifest manifest) {
+        return ids == null || !resolve(ids, manifest).invalid();
+    }
+
+    private static boolean validOccurrencePair(
+            List<String> ids, ResumeSourceRefDTO ref, Manifest manifest) {
+        if (!validOccurrenceIds(ids, manifest) || !validChildRef(ref, manifest)) {
+            return false;
+        }
+        if (ids == null || ids.isEmpty() || ref == null) {
+            return true;
+        }
+        Resolution aggregate = resolve(ids, manifest);
+        Resolution reference = resolve(ref.getSourceOccurrenceIds(), manifest);
+        return new LinkedHashSet<>(aggregate.primaryIds()).containsAll(reference.primaryIds());
+    }
+
+    private static <T> boolean validSemanticRefMap(
+            Map<String, ResumeSourceRefDTO> refs,
+            T owner,
+            Map<String, Function<T, String>> fields,
+            Manifest manifest) {
+        return refs == null || refs.entrySet().stream().allMatch(entry -> {
+            Function<T, String> value = fields.get(entry.getKey());
+            return value != null
+                    && hasText(value.apply(owner))
+                    && entry.getValue() != null
+                    && validChildRef(entry.getValue(), manifest);
+        });
+    }
+
+    private static boolean validAlignedRefs(
+            List<String> values, List<ResumeSourceRefDTO> refs, Manifest manifest) {
+        if (refs == null) return true;
+        if (values == null || values.size() != refs.size()) return false;
+        for (int index = 0; index < refs.size(); index++) {
+            ResumeSourceRefDTO ref = refs.get(index);
+            if (!hasText(values.get(index)) || (ref != null && !validChildRef(ref, manifest))) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private static boolean validChildRef(ResumeSourceRefDTO ref, Manifest manifest) {
+        if (ref == null) {
+            return true;
+        }
+        List<String> ids = ref.getSourceOccurrenceIds();
+        if (ids == null || ids.isEmpty()) {
+            return false;
+        }
+        Resolution resolution = resolve(ids, manifest);
+        String expectedText = resolution.primaryIds().stream()
+                .map(manifest.texts()::get)
+                .collect(Collectors.joining("\n"));
+        List<String> rootPrimaryOrder = List.copyOf(manifest.aliasesByPrimary().keySet());
+        int previousIndex = -1;
+        boolean rootOrdered = true;
+        for (String primary : resolution.primaryIds()) {
+            int currentIndex = rootPrimaryOrder.indexOf(primary);
+            if (currentIndex < 0 || (previousIndex >= 0 && currentIndex != previousIndex + 1)) {
+                rootOrdered = false;
+                break;
+            }
+            previousIndex = currentIndex;
+        }
+        return !resolution.invalid()
+                && !resolution.primaryIds().isEmpty()
+                && rootOrdered
+                && Objects.equals(ref.getText(), expectedText);
     }
 
     private static boolean hasAmbiguousTargetFor(
-            String primary, List<Node> nodes, Manifest manifest, Map<String, Node> authenticatedNodes) {
+            String primary,
+            List<Node> nodes,
+            Manifest manifest,
+            Map<String, Node> authenticatedNodes,
+            Set<String> duplicateTargetIdentities) {
         for (Node node : nodes) {
             Resolution resolution = resolve(node.occurrenceIds(), manifest);
             if (resolution.primaryIds().contains(primary)
-                    && (resolution.invalid() || !authenticatedLineage(node, resolution, manifest, authenticatedNodes))) {
+                    && (resolution.invalid()
+                    || duplicateTargetIdentities.contains(stableIdentity(node))
+                    || !authenticatedLineage(node, resolution, manifest, authenticatedNodes))) {
                 return true;
             }
         }
@@ -335,33 +542,63 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         return result;
     }
 
+    private static Map<String, Node> authenticationIndex(List<Node> sourceNodes) {
+        LinkedHashMap<String, Node> result = new LinkedHashMap<>();
+        for (Node node : sourceNodes) {
+            result.putIfAbsent(stableIdentity(node), node);
+        }
+        return Collections.unmodifiableMap(result);
+    }
+
+    private static Set<String> duplicateIdentities(List<Node> nodes) {
+        LinkedHashSet<String> seen = new LinkedHashSet<>();
+        LinkedHashSet<String> duplicates = new LinkedHashSet<>();
+        for (Node node : nodes) {
+            String identity = stableIdentity(node);
+            if (!seen.add(identity)) {
+                duplicates.add(identity);
+            }
+        }
+        return Collections.unmodifiableSet(duplicates);
+    }
+
     private static boolean authenticatedLineage(
             Node node, Resolution resolution, Manifest manifest, Map<String, Node> authenticatedNodes) {
         if (resolution.primaryIds().isEmpty()) return true;
-        Node frozenNode = authenticatedNodes.get(identity(node));
-        if (frozenNode == null) return false;
+        Node frozenNode = authenticatedNodes.get(stableIdentity(node));
+        if (frozenNode == null || !boundary(frozenNode).equals(boundary(node))) return false;
         Resolution frozen = resolve(frozenNode.occurrenceIds(), manifest);
         return !frozen.invalid() && new LinkedHashSet<>(frozen.primaryIds())
                 .equals(new LinkedHashSet<>(resolution.primaryIds()));
     }
 
-    private static String identity(Node node) {
+    private static String stableIdentity(Node node) {
         if (node == null) return "UNKNOWN";
-        String sectionKind = normalized(node.sectionKind());
         return switch (node.type()) {
-            case "SECTION" -> "SECTION:" + sectionKind + "/" + node.sectionId();
-            case "ENTRY" -> "ENTRY:" + sectionKind + "/" + node.sectionId() + "/" + node.entryId();
-            case "BULLET" -> "BULLET:" + sectionKind + "/" + node.sectionId() + "/" + node.entryId() + "/" + node.bulletId();
+            case "SECTION" -> node.sectionId();
+            case "ENTRY" -> node.entryId();
+            case "BULLET" -> node.bulletId();
+            case "CONTACT" -> node.id().startsWith("contact:")
+                    ? node.id().substring("contact:".length()) : node.id();
             default -> node.id();
         };
     }
 
+    private static AuthenticationBoundary boundary(Node node) {
+        return new AuthenticationBoundary(
+                node.type(), node.sectionKind(), node.sectionId(), node.entryId(), node.bulletId());
+    }
+
     private static Resolution resolve(List<String> values, Manifest manifest) {
-        List<String> raw = values == null ? List.of() : values.stream()
-                .filter(WorkspaceSourceReferenceAssemblerImpl::hasText).map(String::strip).distinct().toList();
+        List<String> raw = values == null ? List.of() : immutableListAllowingNull(values);
+        LinkedHashSet<String> seen = new LinkedHashSet<>();
         LinkedHashSet<String> primary = new LinkedHashSet<>();
-        boolean invalid = false;
+        boolean invalid = !manifest.valid();
         for (String id : raw) {
+            if (!canonicalId(id) || !seen.add(id)) {
+                invalid = true;
+                continue;
+            }
             String resolved = manifest.aliasToPrimary().get(id);
             if (resolved == null) invalid = true;
             else primary.add(resolved);
@@ -374,6 +611,9 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         if (document == null) return nodes;
         ResumeDocumentBasicsDTO basics = document.getBasics();
         if (basics != null) {
+            addField(nodes, "basics", "BASICS", null, null, null, null,
+                    basics.getSourceRef() == null ? null : basics.getSourceRef().getText(),
+                    firstIds(basics.getSourceOccurrenceIds(), basics.getSourceRef()), 1);
             addField(nodes, "basics:name", "BASICS", null, null, null, null, basics.getName(), refIds(basics.getFieldSourceRefs(), "name"), 3);
             addField(nodes, "basics:jobIntention", "BASICS", null, null, null, null, basics.getJobIntention(), refIds(basics.getFieldSourceRefs(), "jobIntention"), 3);
             addField(nodes, "basics:highestEducation", "BASICS", null, null, null, null, basics.getHighestEducation(), refIds(basics.getFieldSourceRefs(), "highestEducation"), 3);
@@ -417,7 +657,7 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
     }
 
     private static List<String> firstIds(List<String> ids, ResumeSourceRefDTO ref) {
-        if (ids != null && ids.stream().anyMatch(WorkspaceSourceReferenceAssemblerImpl::hasText)) return ids;
+        if (ids != null && !ids.isEmpty()) return ids;
         return ref == null || ref.getSourceOccurrenceIds() == null ? List.of() : ref.getSourceOccurrenceIds();
     }
 
@@ -431,7 +671,8 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
     }
 
     private static LinkedHashSet<String> entryOwnOccurrenceIds(ResumeDocumentEntryDTO entry) {
-        LinkedHashSet<String> ids = new LinkedHashSet<>(safe(entry.getSourceOccurrenceIds()));
+        LinkedHashSet<String> ids = new LinkedHashSet<>();
+        addOccurrenceIds(ids, entry.getSourceOccurrenceIds());
         addRefOccurrenceIds(ids, entry.getSourceRef());
         if (entry.getFieldSourceRefs() != null) {
             entry.getFieldSourceRefs().values().forEach(ref -> addRefOccurrenceIds(ids, ref));
@@ -439,29 +680,103 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         safe(entry.getTechStackSourceRefs()).forEach(ref -> addRefOccurrenceIds(ids, ref));
         safe(entry.getSkillItemSourceRefs()).forEach(ref -> addRefOccurrenceIds(ids, ref));
         safe(entry.getSkillDescriptionSourceRefs()).forEach(ref -> addRefOccurrenceIds(ids, ref));
-        ids.removeIf(id -> !hasText(id));
         return ids;
     }
 
-    private static LinkedHashSet<String> projectEntryOccurrenceIds(ResumeDocumentEntryDTO entry) {
-        LinkedHashSet<String> ids = entryOwnOccurrenceIds(entry);
-        for (ResumeDocumentBulletDTO bullet : safe(entry.getBullets())) {
-            if (bullet == null) continue;
-            ids.addAll(safe(bullet.getSourceOccurrenceIds()));
-            addRefOccurrenceIds(ids, bullet.getSourceRef());
+    private static LinkedHashSet<String> projectEntryOccurrenceIds(
+            String sectionId, String entryId, FrozenOwnership sourceOwnership, Manifest manifest) {
+        LinkedHashSet<String> ids = new LinkedHashSet<>();
+        if (!sourceOwnership.valid()) {
+            return ids;
         }
-        ids.removeIf(id -> !hasText(id));
+        for (Map.Entry<String, FrozenOwner> ownerEntry : sourceOwnership.owners().entrySet()) {
+            FrozenOwner owner = ownerEntry.getValue();
+            if ("PROJECT".equals(owner.sectionKind())
+                    && Objects.equals(sectionId, owner.sectionId())
+                    && Objects.equals(entryId, owner.entryId())) {
+                ids.addAll(manifest.aliasesByPrimary().getOrDefault(ownerEntry.getKey(), List.of()));
+            }
+        }
         return ids;
+    }
+
+    private static boolean meaningfulTargetEntry(ResumeDocumentEntryDTO entry) {
+        if (hasText(entryText(entry))
+                || safe(entry.getTechStack()).stream().anyMatch(WorkspaceSourceReferenceAssemblerImpl::hasText)
+                || safe(entry.getSkillItems()).stream().anyMatch(WorkspaceSourceReferenceAssemblerImpl::hasText)
+                || safe(entry.getSkillDescriptions()).stream().anyMatch(WorkspaceSourceReferenceAssemblerImpl::hasText)) {
+            return true;
+        }
+        return safe(entry.getBullets()).stream().filter(Objects::nonNull)
+                .anyMatch(bullet -> hasText(bullet.getText()));
+    }
+
+    private static String boundaryKey(String sectionId, String entryId) {
+        return String.valueOf(sectionId) + "/" + String.valueOf(entryId);
+    }
+
+    private static Set<String> authenticatedProjectEntries(
+            ResumeDocumentDTO target,
+            List<Node> targetNodes,
+            Manifest manifest,
+            Map<String, Node> authenticatedNodes,
+            Map<String, FrozenOwner> sourceOwners) {
+        Set<String> meaningfulEntries = safe(target == null ? null : target.getSections()).stream()
+                .filter(Objects::nonNull)
+                .filter(section -> "PROJECT".equals(section.getKind()))
+                .flatMap(section -> safe(section.getEntries()).stream()
+                        .filter(Objects::nonNull)
+                        .filter(WorkspaceSourceReferenceAssemblerImpl::meaningfulTargetEntry)
+                        .map(entry -> boundaryKey(section.getId(), entry.getId())))
+                .collect(Collectors.toSet());
+        LinkedHashSet<String> authenticated = new LinkedHashSet<>();
+        for (Node node : targetNodes) {
+            if (!"PROJECT".equals(node.sectionKind()) || node.entryId() == null
+                    || !meaningfulEntries.contains(boundaryKey(node.sectionId(), node.entryId()))) {
+                continue;
+            }
+            Resolution resolution = resolve(node.occurrenceIds(), manifest);
+            if (resolution.invalid() || resolution.primaryIds().isEmpty()
+                    || !authenticatedLineage(node, resolution, manifest, authenticatedNodes)) {
+                continue;
+            }
+            boolean ownedByEntry = resolution.primaryIds().stream().anyMatch(primary -> {
+                FrozenOwner owner = sourceOwners.get(primary);
+                return owner != null
+                        && "PROJECT".equals(owner.sectionKind())
+                        && Objects.equals(node.sectionId(), owner.sectionId())
+                        && Objects.equals(node.entryId(), owner.entryId());
+            });
+            if (ownedByEntry) {
+                authenticated.add(boundaryKey(node.sectionId(), node.entryId()));
+            }
+        }
+        return Collections.unmodifiableSet(authenticated);
     }
 
     private static void addRefOccurrenceIds(Set<String> ids, ResumeSourceRefDTO ref) {
-        if (ref != null) ids.addAll(safe(ref.getSourceOccurrenceIds()));
+        if (ref != null) addOccurrenceIds(ids, ref.getSourceOccurrenceIds());
+    }
+
+    private static void addOccurrenceIds(Set<String> ids, List<String> values) {
+        if (values == null) {
+            return;
+        }
+        if (values.stream().anyMatch(id -> !canonicalId(id))
+                || new LinkedHashSet<>(values).size() != values.size()) {
+            ids.add("");
+        }
+        ids.addAll(values);
     }
 
     private static void addStructuralIssues(
             ResumeDocumentDTO source,
             ResumeDocumentDTO target,
             List<SourceBlock> sourceBlocks,
+            FrozenOwnership sourceOwnership,
+            Manifest manifest,
+            List<Node> targetNodes,
+            Map<String, Node> authenticatedNodes,
             List<FidelityIssue> issues) {
         for (ResumeDocumentSectionDTO section : safe(target == null ? null : target.getSections())) {
             if (section != null && !hasText(section.getTitle()) && !safe(section.getEntries()).isEmpty()) {
@@ -476,24 +791,20 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
                 blocksByOccurrence.put(occurrenceId, block);
             }
         }
-        Set<String> targetProjectEntries = safe(target == null ? null : target.getSections()).stream()
-                .filter(Objects::nonNull)
-                .filter(section -> "PROJECT".equalsIgnoreCase(section.getKind() == null ? "" : section.getKind()))
-                .flatMap(section -> safe(section.getEntries()).stream()
-                        .filter(Objects::nonNull)
-                        .map(entry -> safeId(section.getId()) + "/" + safeId(entry.getId())))
-                .collect(Collectors.toSet());
+        Set<String> targetProjectEntries = authenticatedProjectEntries(
+                target, targetNodes, manifest, authenticatedNodes, sourceOwnership.owners());
         List<String> unconfirmedMissingProjectOccurrences = new ArrayList<>();
         boolean unconfirmedMissingProject = false;
         for (ResumeDocumentSectionDTO section : safe(source == null ? null : source.getSections())) {
-            if (section == null || !"PROJECT".equalsIgnoreCase(section.getKind() == null ? "" : section.getKind())) {
+            if (section == null || !"PROJECT".equals(section.getKind())) {
                 continue;
             }
             for (ResumeDocumentEntryDTO entry : safe(section.getEntries())) {
-                if (entry == null || targetProjectEntries.contains(safeId(section.getId()) + "/" + safeId(entry.getId()))) {
+                if (entry == null || targetProjectEntries.contains(boundaryKey(section.getId(), entry.getId()))) {
                     continue;
                 }
-                LinkedHashSet<String> meaningful = projectEntryOccurrenceIds(entry);
+                LinkedHashSet<String> meaningful = projectEntryOccurrenceIds(
+                        section.getId(), entry.getId(), sourceOwnership, manifest);
                 boolean allConfirmed = !meaningful.isEmpty() && meaningful.stream().allMatch(id -> {
                     SourceBlock block = blocksByOccurrence.get(id);
                     return block != null && block.omissionEligible() && block.omissionConfirmed();
@@ -546,12 +857,34 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
         return value != null && !value.isBlank();
     }
 
+    private static boolean canonicalId(String value) {
+        return hasText(value) && value.equals(value.strip());
+    }
+
     private static String safeId(String value) {
-        return hasText(value) ? value.strip() : "unknown";
+        return hasText(value) ? value : "unknown";
     }
 
     private static <T> List<T> safe(List<T> values) {
         return values == null ? List.of() : values;
+    }
+
+    private static <T> List<T> immutableListAllowingNull(List<T> values) {
+        return Collections.unmodifiableList(new ArrayList<>(values));
+    }
+
+    private static <T> Set<T> immutableSet(Set<T> values) {
+        return Collections.unmodifiableSet(new LinkedHashSet<>(values));
+    }
+
+    private static <K, V> Map<K, V> immutableMap(Map<K, V> values) {
+        return Collections.unmodifiableMap(new LinkedHashMap<>(values));
+    }
+
+    private static Map<String, List<String>> immutableAliases(Map<String, List<String>> aliases) {
+        LinkedHashMap<String, List<String>> immutable = new LinkedHashMap<>();
+        aliases.forEach((primary, ids) -> immutable.put(primary, List.copyOf(ids)));
+        return Collections.unmodifiableMap(immutable);
     }
 
     private record Manifest(
@@ -567,6 +900,8 @@ public class WorkspaceSourceReferenceAssemblerImpl implements WorkspaceSourceRef
             String nodeType, String sectionKind, String sectionId, String entryId, String bulletId,
             int depth, boolean eligible) {}
     private record Resolution(List<String> rawIds, List<String> primaryIds, boolean invalid) {}
+    private record AuthenticationBoundary(
+            String type, String sectionKind, String sectionId, String entryId, String bulletId) {}
     private record Node(String id, String type, String sectionKind, String sectionId, String entryId,
                         String bulletId, String text, List<String> occurrenceIds, int depth) {}
 }
